[gd_scene format=3 uid="uid://dtlrsmkxtka2r"]

[ext_resource type="Script" uid="uid://k2wfceal6ind" path="res://Script/Player.gd" id="1_85brt"]
[ext_resource type="Script" uid="uid://bi1jtmusoy4mm" path="res://asset/Player_fix/hand.gd" id="2_4ntmi"]
[ext_resource type="PackedScene" uid="uid://c15ty4b1m5rr7" path="res://canvas_layer.tscn" id="3_ujr11"]
[ext_resource type="AudioStream" uid="uid://n5s5imckwhwa" path="res://asset/SFX/walk.wav" id="4_74dyw"]
[ext_resource type="Shader" uid="uid://cr0sgxwsmghke" path="res://asset/Player_fix/CRT.gdshader" id="4_w70i0"]
[ext_resource type="PackedScene" uid="uid://bs1qqace6unyv" path="res://asset/Player_fix/shop_ui.tscn" id="5_pene0"]
[ext_resource type="AudioStream" uid="uid://coi5d6lh7k75b" path="res://asset/SFX/run.wav" id="5_wcfnn"]
[ext_resource type="AudioStream" uid="uid://bdt5ojp401ghy" path="res://asset/SFX/jump.wav" id="6_wcfnn"]
[ext_resource type="AudioStream" uid="uid://bocbxs7n0swfc" path="res://asset/SFX/door.wav" id="7_4ssyf"]
[ext_resource type="AudioStream" uid="uid://cjcqxqxirqruy" path="res://asset/SFX/paper.wav" id="8_iaco7"]
[ext_resource type="AudioStream" uid="uid://duv25gcp3y7ca" path="res://asset/SFX/pickup.wav" id="9_en0d6"]
[ext_resource type="AudioStream" uid="uid://cyhj25bvteglm" path="res://asset/SFX/sweep.wav" id="10_4hnge"]
[ext_resource type="AudioStream" uid="uid://duoja1q3euw56" path="res://asset/SFX/locked.wav" id="11_byoue"]
[ext_resource type="AudioStream" uid="uid://cj66g26auvcfc" path="res://asset/SFX/bed.wav" id="11_ug86m"]
[ext_resource type="AudioStream" uid="uid://cu2pl611da8c" path="res://asset/SFX/trash.wav" id="12_4it0c"]
[ext_resource type="Script" uid="uid://cvg1j0rivlpmf" path="res://Script/BuildingComponent.gd" id="16_m6b2i"]
[ext_resource type="Script" uid="uid://dsbcgyq4tq07g" path="res://Script/InteractionComponent.gd" id="17_moa2g"]
[ext_resource type="Script" uid="uid://bo7t3u0xy5y4m" path="res://Script/InventoryComponent.gd" id="18_0s0oj"]
[ext_resource type="Script" uid="uid://bi0irwcojjx78" path="res://Script/MovementComponent.gd" id="19_ssin8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4it0c"]
radius = 0.294586

[sub_resource type="Animation" id="Animation_4470a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_74dyw"]
resource_name = "fade_in"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ujr11"]
resource_name = "fade_out"
length = 0.15
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcfnn"]
_data = {
&"RESET": SubResource("Animation_4470a"),
&"fade_in": SubResource("Animation_74dyw"),
&"fade_out": SubResource("Animation_ujr11")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w70i0"]
shader = ExtResource("4_w70i0")
shader_parameter/brightnessMult = 1.5
shader_parameter/wiggleMult = 0.001
shader_parameter/chromaticAberrationOffset = 0.001

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4flbx"]
bg_color = Color(0.374564, 0.366481, 0.344614, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onrkg"]
bg_color = Color(0.219608, 0.717647, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_4flbx"]

[node name="Player" type="CharacterBody3D" unique_id=324087956]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_85brt")

[node name="Head" type="Node3D" parent="." unique_id=246061628]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.796242, 0)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=781796407]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.166522, 0)
cull_mask = 1048569
fov = 65.0

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D" unique_id=1185654424]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0380953)
layers = 7
light_energy = 0.2
spot_range = 10.0
spot_angle = 50.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D" unique_id=248117159]
target_position = Vector3(0, 0, -2.5)
collision_mask = 7

[node name="small_target" type="RayCast3D" parent="Head/Camera3D" unique_id=1580002704]
target_position = Vector3(0, 0, -1)
collision_mask = 7

[node name="hand" type="Node3D" parent="Head/Camera3D" unique_id=441479522]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.495, -0.747426, -0.984161)
script = ExtResource("2_4ntmi")

[node name="HandTarget" type="Marker3D" parent="Head/Camera3D" unique_id=670601286]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.4835622)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=524614029]
shape = SubResource("CapsuleShape3D_4it0c")

[node name="ObjectSpawn" type="Node3D" parent="." unique_id=1710462640]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05910623, 0, -1.3486542)
script = ExtResource("2_4ntmi")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=752607903]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer" unique_id=1626591108]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer" unique_id=1529411526]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport" unique_id=1878408943]
cull_mask = 1047554

[node name="WeaponSocket" type="Node3D" parent="CanvasLayer/SubViewportContainer/SubViewport/Camera3D" unique_id=2036090975]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=635616281]
light_mask = 7
visibility_layer = 7
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.122252, 0.122252, 0.122252, 0.768627)

[node name="InteractLabel" type="Label" parent="CanvasLayer" unique_id=915130054]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" unique_id=1668157931]
self_modulate = Color(0.687215, 0.687215, 0.687215, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 259.0
offset_top = 146.0
offset_right = -260.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="Button" type="Button" parent="CanvasLayer/TextureRect" unique_id=2114790321]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = 29.0
offset_right = 54.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "[E] To Escape"

[node name="Pausemenu" parent="CanvasLayer" unique_id=2036229134 instance=ExtResource("3_ujr11")]
visible = false

[node name="FadeRect" type="ColorRect" parent="CanvasLayer" unique_id=298539228]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="FadeAnim" type="AnimationPlayer" parent="CanvasLayer" unique_id=1686957283]
libraries/ = SubResource("AnimationLibrary_wcfnn")

[node name="CRT" type="ColorRect" parent="CanvasLayer" unique_id=103730426]
visible = false
material = SubResource("ShaderMaterial_w70i0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="sprintui" type="Control" parent="CanvasLayer" unique_id=1465166915]
light_mask = 7
visibility_layer = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="sprintbar" type="ProgressBar" parent="CanvasLayer/sprintui" unique_id=720052281]
layout_mode = 0
offset_left = 22.0
offset_top = 24.0
offset_right = 206.0
offset_bottom = 39.0
theme_override_styles/background = SubResource("StyleBoxFlat_4flbx")
theme_override_styles/fill = SubResource("StyleBoxFlat_onrkg")
max_value = 5.0
show_percentage = false

[node name="CrosshairUI" type="Control" parent="CanvasLayer" unique_id=2074433042]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/CrosshairUI" unique_id=518239510]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_4flbx")

[node name="ShopUI" parent="CanvasLayer" unique_id=396407018 instance=ExtResource("5_pene0")]
visible = false

[node name="SFX" type="Node3D" parent="." unique_id=613082356]

[node name="footstep_walk" type="AudioStreamPlayer3D" parent="SFX" unique_id=1381809470]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = ExtResource("4_74dyw")
attenuation_model = 2
unit_size = 1.5
max_db = 1.5
pitch_scale = 1.15

[node name="footstep_run" type="AudioStreamPlayer3D" parent="SFX" unique_id=1732301018]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = ExtResource("5_wcfnn")
unit_size = 1.0
max_db = 1.0

[node name="Jump" type="AudioStreamPlayer3D" parent="SFX" unique_id=2010443313]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = ExtResource("6_wcfnn")
unit_size = 2.0
pitch_scale = 1.1

[node name="door" type="AudioStreamPlayer3D" parent="SFX" unique_id=861440898]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -1.11323)
stream = ExtResource("7_4ssyf")
attenuation_model = 1
unit_size = 1.7
max_db = 1.0
pitch_scale = 1.5

[node name="paper" type="AudioStreamPlayer3D" parent="SFX" unique_id=2080108963]
stream = ExtResource("8_iaco7")
unit_size = 0.5
max_db = 1.0
pitch_scale = 3.0

[node name="pickup" type="AudioStreamPlayer3D" parent="SFX" unique_id=506479493]
stream = ExtResource("9_en0d6")
unit_size = 1.0
max_db = 1.0
pitch_scale = 0.7

[node name="locked" type="AudioStreamPlayer3D" parent="SFX" unique_id=1139130745]
stream = ExtResource("11_byoue")
unit_size = 1.0
max_db = 1.0
pitch_scale = 0.9

[node name="sweep" type="AudioStreamPlayer3D" parent="SFX" unique_id=1067295823]
stream = ExtResource("10_4hnge")
unit_size = 5.0
max_db = 2.0

[node name="bed" type="AudioStreamPlayer3D" parent="SFX" unique_id=1631468108]
stream = ExtResource("11_ug86m")
unit_size = 5.0
max_db = 2.0

[node name="trash" type="AudioStreamPlayer3D" parent="SFX" unique_id=1003712312]
stream = ExtResource("12_4it0c")
unit_size = 5.0
max_db = 2.0

[node name="BuildingComponent" type="Node" parent="." unique_id=369474114]
script = ExtResource("16_m6b2i")
metadata/_custom_type_script = "uid://cvg1j0rivlpmf"

[node name="InteractionComponent" type="Node" parent="." unique_id=1333138685]
script = ExtResource("17_moa2g")
metadata/_custom_type_script = "uid://dsbcgyq4tq07g"

[node name="InventoryComponent" type="Node" parent="." unique_id=2025351058]
script = ExtResource("18_0s0oj")
metadata/_custom_type_script = "uid://bo7t3u0xy5y4m"

[node name="MovementComponent" type="Node" parent="." unique_id=749458501]
script = ExtResource("19_ssin8")
metadata/_custom_type_script = "uid://bi0irwcojjx78"
